--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ plugins: # previsously gems
 feed:
   path: atom.xml
 
-# Pagination - https://jekyllrb.com/docs/pagination/
+# Pagisdfnation - https://jekyllrb.com/docs/pagination/
 paginate: 10
 paginate_path: /page:num/
 
