--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ email: parthswat@gmail.com
 description:
 baseurl: # the optional subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-author: Parth Saraswat
-  name:
+author:
+  name: Parth Saraswat
   twitter:
   picture:
 twitter_username:
