--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,16 @@
 lang: en-US
 title: Parth's Website
 email: parthswat@gmail.com
-description:
+description: This is Parth's site. 
 baseurl: # the optional subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://parthsaraswat.github.io/jekyll-theme-basically-basic/# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 author:
   name: Parth Saraswat
   twitter:
-  picture:
+  picture: # https://i.ibb.co/MRsWB8x/62000312-1045683035822503-7457696271422768429-n.jpg
 twitter_username:
 github_username: parthsaraswat
-logo: # path of site logo, e.g. "/assets/images/logo.png"
+logo: https://i.ibb.co/nn3SnJj/myAvatar.png # path of site logo, e.g. "/assets/images/logo.png"
 search: # true, false (default)
 search_full_content: false # true, false (default)
 search_provider: # lunr (default), algolia
@@ -46,8 +46,8 @@ plugins: # previsously gems
 feed:
   path: atom.xml
 
-# Pagisdfnation - https://jekyllrb.com/docs/pagination/
-paginate: 10
+# Pagination - https://jekyllrb.com/docs/pagination/
+paginate: 5
 paginate_path: /page:num/
 
 # Exclude from processing.
